--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -93,225 +93,52 @@
             <div class="row d-flex justify-content-center">
                 <div class="menu-content pb-40 col-lg-8">
                     <div class="title text-center">
-                        <h1 class="mb-10">Popular Destinations</h1>
+                        <h1 class="mb-10">Popular Packages</h1>
                         <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely
                             fast, day to.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d1.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
+                {% for package_obj in package_objs %}
+                    <div class="col-lg-4">
+                        <div class="single-destinations">
+                            <div class="thumb">
+                                <img src="{{ package_obj.url }}" alt="">
+                            </div>
+                            <div class="details">
+                                <h4>{{ package_obj.package_name }}</h4>
+                                <p>
+                                    {{ package_obj.package_city }}, {{ package_obj.package_province }}
+                                </p>
+                                <ul class="package-list">
+                                    <li class="d-flex justify-content-between align-items-center">
+                                        <span>Duration</span>
+                                        <span>{{ package_obj.package_duration }}</span>
+                                    </li>
+                                    <li class="d-flex justify-content-between align-items-center">
+                                        <span>Date</span>
+                                        <span>{{ package_obj.date }}</span>
+                                    </li>
+    {#                                <li class="d-flex justify-content-between align-items-center">#}
+    {#                                    <span>Airport</span>#}
+    {#                                    <span>Changi</span>#}
+    {#                                </li>#}
+                                    <li class="d-flex justify-content-between align-items-center">
+                                        <span>Extras</span>
+                                        <span>{{ package_obj.extras }}</span>
+                                    </li>
+                                    <li class="d-flex justify-content-between align-items-center">
+                                        <span>Price per person</span>
+                                        <a href="#" class="price-btn">${{ package_obj.package_price }}</a>
+                                    </li>
+                                </ul>
+                            </div>
                     </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d2.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d3.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d4.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d5.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-destinations">
-                        <div class="thumb">
-                            <img src="/staticfiles/img/packages/d6.jpg" alt="">
-                        </div>
-                        <div class="details">
-                            <h4>Holiday Sea beach Blue Ocean</h4>
-                            <p>
-                                United staes of America
-                            </p>
-                            <ul class="package-list">
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Duration</span>
-                                    <span>06 days and 7 nights</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Date</span>
-                                    <span>18.04.2018</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Airport</span>
-                                    <span>Changi</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Extras</span>
-                                    <span>All Inclusive</span>
-                                </li>
-                                <li class="d-flex justify-content-between align-items-center">
-                                    <span>Price per person</span>
-                                    <a href="#" class="price-btn">$250</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
-        </div>
     </section>
     <!-- End destinations Area -->
 
