--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -46,7 +46,7 @@
                         <div class="details">
                             <h4 class="text-white">Ancient Architecture</h4>
                             <p class="text-white">
-                                Cairo, Egypt
+                                Quebec, Canada
                             </p>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                         <div class="details">
                             <h4 class="text-white">Ancient Architecture</h4>
                             <p class="text-white">
-                                Cairo, Egypt
+                                Halifax, Nova Scotia
                             </p>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                         <div class="details">
                             <h4 class="text-white">Ancient Architecture</h4>
                             <p class="text-white">
-                                Cairo, Egypt
+                                Churchill, Manitoba
                             </p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                     </li>
                                     <li class="d-flex justify-content-between align-items-center">
                                         <span>Price per person</span>
-                                        <a href="#" class="price-btn">${{ package_obj.package_price }}</a>
+                                        <a href="{% url 'app:booking'  %}" class="price-btn">${{ package_obj.package_price }}</a>
                                     </li>
                                 </ul>
                             </div>
